[gd_scene load_steps=2 format=3 uid="uid://clocmgn1k5iy6"]

[ext_resource type="Script" path="res://mainMenuScript.gd" id="1_syva0"]

[node name="Main Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_syva0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 198.0
offset_bottom = 51.0
grow_vertical = 2
alignment = 1

[node name="buttonStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="buttonOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="buttonQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return To Desktop"

[connection signal="pressed" from="VBoxContainer/buttonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/buttonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/buttonQuit" to="." method="_on_button_quit_pressed"]
